--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "./sql/docker.sh && node main"
+    "start": "./sql/docker.sh && node main",
+    "dev": "./sql/docker.sh && nodemon main.js",
+    "test": "jest --testTimeout=10000"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/build/"
+    ]
   },
   "author": "Louis VDP",
   "license": "ISC",
@@ -17,5 +26,10 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   }
 }
