--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./sql/docker.sh && node main",
     "dev": "./sql/docker.sh && nodemon main.js",
-    "test": "jest --testTimeout=10000"
+    "test": "./sql/docker_test.sh && jest --testTimeout=10000 && sh ./sql/docker_test_clear.sh"
   },
   "jest": {
     "testEnvironment": "node",
