--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectly-back",
+  "name": "projectly-api-business",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
